# strata

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE.md  NOTICE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: dev-packs.yaml  installer-packs.yaml  release-installers.yaml  release-packs.yaml  runtime-packs.yaml
apps/desktop/: package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: dialog.json
apps/desktop/src-tauri/resources/: system_prompt.txt
apps/desktop/src-tauri/sidecar/runtime-installer/: Cargo.toml
apps/desktop/src-tauri/sidecar/runtime-installer/src/: main.rs
apps/desktop/src-tauri/src/: app_state.rs  engine.rs  lib.rs  main.rs  metadata.rs  metadata_indexer.rs  model.rs  plugin.rs  runtime.rs  store.rs
apps/desktop/src-tauri/src/engine/: loader.rs  mod.rs  service.rs
apps/desktop/src-tauri/src/metadata/: indexer.rs  mod.rs  provider.rs
apps/desktop/src-tauri/src/model/: import.rs  list.rs  mod.rs  select.rs
apps/desktop/src-tauri/src/plugin/: backend.rs  loader.rs  locate.rs  mod.rs
apps/desktop/src-tauri/src/runtime/: discover.rs  install.rs  mod.rs
apps/desktop/src/components/: ChatTranscript.tsx  Composer.tsx  EmptyState.tsx  Header.tsx  LeftNav.tsx  ModelInfoDrawer.tsx  ModelsRail.tsx
apps/desktop/src/context/: HwProfileContext.tsx
apps/desktop/src/hooks/: useHwProfile.ts  useLLM.ts  useModelMeta.ts  useModels.ts
apps/desktop/src/layouts/: MainLayout.tsx
apps/desktop/src/lib/: api.ts  dialog.ts  events.ts
apps/desktop/src/pages/: Chat.tsx
apps/desktop/src/ui/: icons.tsx
crates/backends/llama/llama-plugin/: Cargo.toml  mod.rs
crates/backends/llama/llama-plugin/src/: backend.rs  batch.rs  cache.rs  context.rs  format.rs  lib.rs  metadata.rs  model.rs  plugin_metadata.rs  sampling.rs
crates/backends/llama/llama-plugin/src/adapter/: engine.rs  kv.rs  mod.rs
crates/backends/llama/llama-plugin/src/backends/: dispatch.rs  vulkan.rs
crates/backends/llama/llama-plugin/src/ffi/: batch.rs  context.rs  metadata.rs  mod.rs  model.rs  runtime.rs  sampling.rs
crates/backends/llama/llama-plugin/src/metadata/: metadata.rs  mod.rs  provider.rs  scrape.rs
crates/backends/llama/llama-plugin/src/params/: params.rs
crates/backends/llama/llama-plugin/src/sampling/: mod.rs
crates/backends/llama/llama-rs/: Cargo.toml  mod.rs
crates/backends/llama/llama-rs/src/: debug.rs  lib.rs
crates/backends/llama/llama-rs/src/backends/: cpu.rs  cuda.rs  mod.rs  rocm.rs
crates/backends/llama/llama-rs/src/batch/: batch.rs  mod.rs
crates/backends/llama/llama-rs/src/context/: context.rs
crates/backends/llama/llama-rs/src/ffi/: ffi.rs
crates/backends/llama/llama-rs/src/model/: model.rs
crates/backends/llama/llama-rs/src/sampling/: sampling.rs
crates/backends/llama/llama-rs/src/token/: token.rs
crates/backends/llama/llama-sys/: Cargo.toml  build.rs
crates/strata-abi/: Cargo.toml
crates/strata-abi/src/: backend.rs  ffi.rs  lib.rs  metadata.rs  sampling.rs  token.rs
crates/strata-core/: Cargo.toml
crates/strata-core/src/: lib.rs  memory.rs
crates/strata-core/src/backends/: llama_backend.rs  mod.rs
crates/strata-core/src/engine/: decode.rs  engine.rs  mod.rs  prefill.rs  utils.rs
crates/strata-core/src/format/: format.rs  mod.rs  prompt_format.rs  prompting.rs
crates/strata-core/src/metadata/: dto.rs  dynamic.rs  metadata_providers.rs  metadata_service.rs  mod.rs  service.rs
crates/strata-core/src/traits/: backend.rs  metadata.rs  mod.rs  sampling.rs  token.rs
crates/strata-core/src/utils/: debug.rs
crates/strata-hwprof/: Cargo.toml
crates/strata-hwprof/src/: cache.rs  lib.rs  paths.rs  types.rs
crates/strata-hwprof/src/detect/: linux.rs  macos.rs  mod.rs  util.rs  windows.rs
crates/strata-plugins/: Cargo.toml
crates/strata-plugins/src/: errors.rs  lib.rs  paths.rs  state.rs  tauri_api.rs  types.rs
crates/strata-plugins/src/install/: mod.rs  runtime.rs  unzip.rs
crates/strata-plugins/src/manifest/: mod.rs  verify.rs
crates/strata-plugins/src/net/: download.rs  mod.rs
packaging/windows/: installer.nsi
