[workspace]
members = [
  "apps/desktop/src-tauri",
  "apps/desktop/src-tauri/sidecar/runtime-installer",
  "crates/strata-core",
  "crates/strata-abi",
  "crates/backends/llama/llama-rs",
  "crates/backends/llama/llama-sys",
  "crates/backends/llama/llama-plugin",
]
resolver = "2"

# Default build target for `cargo build` etc.
default-members = ["apps/desktop/src-tauri"]

[workspace.dependencies]
# shared external deps
bindgen = "0.69"
cc = { version = "1.0", features = ["parallel"] }
serde = { version = "1", features = ["derive"] }
once_cell = "1.21.3"
strata-core = { path = "crates/strata-core" }
strata-abi = { path = "crates/strata-abi" }
llama-sys = { path = "crates/backends/llama/llama-sys" }
llama-rs = { path = "crates/backends/llama/llama-rs" }
llama-plugin = { path = "crates/backends/llama/llama-plugin" }