[workspace]
members = [
  # apps
  "apps/desktop/src-tauri",

  # core crates
  "crates/strata-core",
  "crates/strata-abi",
  "crates/strata-hwprof",
  "crates/strata-plugins",

  # backends
  "crates/backends/llama/llama-sys",
  "crates/backends/llama/llama-plugin",
]

resolver = "2"

# Default build target for `cargo build`
default-members = ["apps/desktop/src-tauri"]

[workspace.dependencies]
# shared external deps
bindgen = "0.69"
cc = { version = "1.0", features = ["parallel"] }
serde = { version = "1", features = ["derive"] }
once_cell = "1.21.3"

# internal workspace crates
strata-core = { path = "crates/strata-core" }
strata-abi  = { path = "crates/strata-abi" }
strata-hwprof = { path = "crates/strata-hwprof" }
strata-plugins = { path = "crates/strata-plugins" }
llama-sys   = { path = "crates/backends/llama/llama-sys" }
llama-plugin = { path = "crates/backends/llama/llama-plugin" }