[package]
name = "strata-core"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
llama-rs = { path = "../backends/llama/llama-rs" }
# temporary: direct FFI access if needed
llama-sys = { path = "../backends/llama/llama-sys" }
serde = { version = "1", features = ["derive"] }
once_cell = "1.21.3"

[features]
utf8-trace = []
