[package]
name = "strata-hwprof"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Hardware profiling for Strata (OS/CPU/GPU/backend capability) with caching."

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
raw-cpuid = "11"
num_cpus = "1"
sysinfo = "0.30"
libloading = "0.8"
fs2 = "0.4"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Windows & Linux: Vulkan for GPU enumeration
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
ash = "0.37"

# macOS: Metal for GPU detection
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"