[package]
name = "strata-plugins"
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"
description = "Plugin store + runtime installer for Strata (blocking IO, no feature flags)."
repository = "https://github.com/Jadevit/strata"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Optional, but we use it to detect OS/arch strings once
once_cell = "1.19"

# Only compiled on the matching platforms (no feature flags needed)
# Used to detect a GPU preference for runtime auto-selection.
nvml-wrapper = { version = "0.10", optional = true }
ash = { version = "0.38", default-features = false, optional = true }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
nvml-wrapper = "0.10"
ash = { version = "0.38", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"