[package]
name = "strata-plugins"
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"
description = "Plugin store + runtime installer for Strata (blocking IO, no feature flags)."
repository = "https://github.com/Jadevit/strata"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Used for stable lazy statics (manifest URLs, etc.)
once_cell = "1.19"

# ---------- Platform-specific dependencies ----------

# Linux & Windows: enable GPU detection (CUDA + Vulkan)
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
nvml-wrapper = "0.10"
ash = { version = "0.38", default-features = false, features = ["loaded"] }

# macOS: use Metal for GPU detection
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
debug = true