[package]
name = "strata"
version = "0.1.0"
description = "A Tauri App"
authors = ["Jaden Pain"]
edition = "2024"

[lib]
name = "strata"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strata-core = { path = "../../../crates/strata-core" }
llama-rs = { path = "../../../crates/backends/llama/llama-rs" }
llama-sys = { path = "../../../crates/backends/llama/llama-sys" }
once_cell = "1.21.3"
dirs = "5"

[features]
utf8-trace = []
