[package]
name = "strata"
version = "0.1.0"
description = "A Tauri App"
authors = ["Jaden Pain"]
edition = "2024"

[lib]
name = "strata"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strata-abi = { workspace = true }
strata-core = { workspace = true }
strata-hwprof = { workspace = true }
strata-plugins = { workspace = true }
once_cell = "1.21.3"
dirs = "5"
libloading = "0.8.9"
fxhash = "0.2"
