[package]
name = "llama-plugin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Strata llama backend plugin (C-ABI)."

[lib]
name = "llama_plugin"          # produces libllama_plugin.(so|dylib) / llama_plugin.dll
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# paths relative to this crate's folder
strata-abi = { path = "../../../strata-abi" }
llama-rs   = { path = "../llama-rs" }