[package]
name = "llama-plugin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Strata llama backend plugin (C-ABI)."

[lib]
name = "StrataLlama"          # produces libllama_plugin.(so|dylib) / llama_plugin.dll
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strata-abi = { path = "../../../strata-abi" }
llama-rs   = { path = "../llama-rs" }

[features]
default = []
cuda   = ["llama-rs/cuda"]
vulkan = ["llama-rs/vulkan"]
metal  = ["llama-rs/metal"]
dynamic-link = ["llama-rs/dynamic-link"]