[package]
name = "llama-plugin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Strata llama backend plugin (C-ABI)."

[lib]
name = "StrataLlama"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strata-abi = { path = "../../../strata-abi" }
llama-sys   = { path = "../llama-sys" }
num_cpus    = "1.16"
once_cell   = "1.21.3"

[features]
default = []
cuda         = ["llama-sys/cuda"]
vulkan       = ["llama-sys/vulkan"]
metal        = ["llama-sys/metal"]
dynamic-link = ["llama-sys/dynamic-link"]