[package]
name = "llama-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
llama-sys = { workspace = true }
strata-abi = { workspace = true }
num_cpus = "1.16"
once_cell = "1.21.3"

[features]
default = []
ffi-trace = []
utf8-trace = []
cuda   = ["llama-sys/cuda"]
vulkan = ["llama-sys/vulkan"]
metal  = ["llama-sys/metal"]
dynamic-link = ["llama-sys/dynamic-link"]