[package]
name = "runtime-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
zip = "0.6"
sha2 = "0.10"
hex = "0.4"
which = "6"
libloading = "0.8"
dirs = "5"
indicatif = "0.17"