[package]
name = "runtime-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
zip = "0.6"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
clap = { version = "4.5", features = ["derive"] }

# --- GPU detection deps (platform-gated) ---
# CUDA / NVML (Windows + Linux)
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
nvml-wrapper = "0.9"
ash = { version = "0.38", default-features = false, features = ["loaded", "std"] }

# Metal (macOS)
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"